--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+
     <title>React App</title>
   </head>
   <body>
