--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
+    <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
 
-    <script src="https://embed.twitch.tv/embed/v1.js"></script>
 
     <title>React App</title>
   </head>
